# manifold3d-sys-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml  test.yml
.scripts/: reduce_package_size.sh
