[package]
name = "manifold3d-sys"
description = "Raw FFI bindings for Manifold's C API"
homepage = "https://github.com/NickUfer/manifold3d-sys-rs"
license = "Apache-2.0"
version = "0.0.2"
edition = "2021"

[dependencies]
regex = "1.11"

[build-dependencies]
cc = "1.2"
bindgen = "0.70"
regex = "1.11"

[features]
full = ["export"]
export = []