[package]
name = "manifold3d-sys"
description = "Raw FFI bindings for Manifold's C API"
homepage = "https://github.com/NickUfer/manifold3d-sys-rs"
license = "Apache-2.0"
version = "0.0.2"
edition = "2021"

include = [
    "/src",
    "/vendor/assimp/include",
    "/vendor/Clipper2/CPP/Clipper2Lib",
    "/vendor/Clipper2/CPP/Clipper2Lib/src",
    "/vendor/Clipper2/CPP/Utils",
    "/vendor/manifold/include",
    "/vendor/manifold/bindings/c",
    "/vendor/manifold/src",
    "/vendor/oneTBB/include",
    "/build.rs",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md"
]

[dependencies]
regex = "1.11"

[build-dependencies]
cc = "1.2"
bindgen = "0.70"
regex = "1.11"

[features]
export = []
parallel = []