[package]
name = "manifold3d-sys"
description = "Raw FFI bindings for Manifold's C API"
homepage = "https://github.com/NickUfer/manifold3d-sys-rs"
license = "Apache-2.0"
version = "0.0.7"
edition = "2021"

include = [
    "/src",
    "/vendor/manifold/cmake",
    "/vendor/manifold/include",
    "/vendor/manifold/bindings/c",
    "/vendor/manifold/bindings/CMakeLists.txt",
    "/vendor/manifold/src",
    "/vendor/manifold/CMakeLists.txt",
    "/build.rs",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md"
]

[lib]
crate-type = ["lib"]

[build-dependencies]
cmake = "0.1"
bindgen = "0.70"

[features]
export = []
parallel = []
static = []